spacing bug fix

--- a/_sass/minima/_layout.scss
+++ b/_sass/minima/_layout.scss
@@ -175,7 +175,7 @@ article p {
  * Page content
  */
 .page-content {
-  padding: $spacing-unit * 2;
+  padding: $spacing-unit * 2 0;
   flex: 1;
 }
 
